fixed z-index error

--- a/src/background-effect/background-effect.css
+++ b/src/background-effect/background-effect.css
@@ -1,4 +1,5 @@
 .background-effect-container{
+    z-index: -50;
     position: fixed;
     height: 100%;
     width: 100%;
